App now loads successfully

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <title>Your Title Here</title>
-</head>
-<body ng-app="your.module.name">
-
-</body>
+    <title>Webpack App</title>
+  </head>
+  <body id="root" ng-cloak ng-app="">
+  <ui-view></ui-view>
+  </body>
 </html>
